--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
 		<title>Almi</title>
 
 		<link rel="stylesheet" href="./css/bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen" title="no title">
@@ -12,7 +14,40 @@
 	</head>
 	<body>
 
-		<div class="background-image-body">
+		 <div class="background-image-body"> <!-- background-image-body -->
+			 <!-- <div id="carousel-example-generic" class="carousel slide gradient" data-ride="carousel"> -->
+				 <!-- Indicators -->
+
+				 <!-- Wrapper for slides -->
+				 <!-- <div class="carousel-inner" role="listbox">
+					 <div class="item active">
+						 <img src="./img/concert.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/event.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/business.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/customer.jpg" alt="...">
+					 </div>
+				 </div> -->
+
+				 <!-- Controls -->
+				 <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+					 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					 <span class="sr-only">Previous</span>
+				 </a>
+				 <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					 <span class="sr-only">Next</span>
+				 </a>
+				</div> -->
+
+
+
+
 
 			<header class="animated fadeInDown">
 				<nav class="navbar navbar-default">
@@ -37,7 +72,11 @@
 			<section id="landing-hero">
 				<div class="container animated fadeInUp">
 					<div class="row">
-						<h1>Build a chatbot for your next event in less than 5 minutes</h1>
+						<h1>A Chatbot builder platform for <br>
+							<div class="typewrite"><span class="blinking-cursor">|</span>
+							</div>
+							<span class="blinking-cursor">|</span>
+						</h1>
 						<h3>A bot creation platform that doesn't require a tech degree</h3>
 						<!-- Large modal -->
 						<div class="center-block">
@@ -51,7 +90,7 @@
 						<div class="modal-content">
 							<div class="modal-body">
 								<div class="upper-modal">
-									<h1>Take it for a test drive</h1>
+									<h1 class="modal-title">Take it for a test drive</h1>
 									<p>
 										Text the number <span class="phone-number">(510) 545-4447</span>
 									</p>
@@ -90,21 +129,33 @@
 					</div>
 				</div>
 			</section>
+			<!-- remove gradient -->
+		<!-- <div class="gradient">
 
+		</div> -->
+	</div>
 
-		<div class="gradient">
-			<!-- <div class="credibility">
-				<img src="./img/tc-techcrunch.png" alt="TechCrunch logo" />
-			</div> -->
+	<section>
+		<div class="container">
+			<div class="row">
+
+			</div>
 		</div>
-
-
-
-		</div>
+	</section>
 
 
 
 		<script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./js/txtType.js"></script>
+		<script type="text/javascript" src="./js/hero_carousel.js"></script>
+
+		<script>
+		$('.carousel').carousel({
+			interval: 3500
+		})
+		</script>
+
+
 		</body>
 </html>
