--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
 		<title>Almi</title>
 
 		<link rel="stylesheet" href="./css/bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen" title="no title">
@@ -12,14 +14,47 @@
 	</head>
 	<body>
 
-		<div class="background-image-body">
+		 <div class="background-image-body"> <!-- background-image-body -->
+			 <!-- <div id="carousel-example-generic" class="carousel slide gradient" data-ride="carousel"> -->
+				 <!-- Indicators -->
+
+				 <!-- Wrapper for slides -->
+				 <!-- <div class="carousel-inner" role="listbox">
+					 <div class="item active">
+						 <img src="./img/concert.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/event.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/business.jpg" alt="...">
+					 </div>
+					 <div class="item">
+						 <img src="./img/customer.jpg" alt="...">
+					 </div>
+				 </div> -->
+
+				 <!-- Controls -->
+				 <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+					 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					 <span class="sr-only">Previous</span>
+				 </a>
+				 <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					 <span class="sr-only">Next</span>
+				 </a>
+				</div> -->
+
+
+
+
 
 			<header class="animated fadeInDown">
 				<nav class="navbar navbar-default">
 				  <div class="container-fluid">
 				    <!-- Brand and toggle get grouped for better mobile display -->
 				    <div class="navbar-header">
-				      <span class="navbar-brand" href="#">Almi</span>
+				      <span class="navbar-brand" href="#">Kreo</span>
 				    </div>
 				    <!-- Collect the nav links, forms, and other content for toggling -->
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,8 +72,14 @@
 			<section id="landing-hero">
 				<div class="container animated fadeInUp">
 					<div class="row">
-						<h1>Build a chatbot for your next event in less than 5 minutes</h1>
-						<h3>A bot creation platform that doesn't require a tech degree</h3>
+						<h1>Build a chatbot for your
+							<div class="typewrite"><span class="blinking-cursor">|</span>
+							</div>
+							<span class="blinking-cursor">|</span>
+							<br>
+							without the hastle
+						</h1>
+						<h3>A chatbot creation platform that doesn't require programming experience</h3>
 						<!-- Large modal -->
 						<div class="center-block">
 							<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it</button>
@@ -51,7 +92,7 @@
 						<div class="modal-content">
 							<div class="modal-body">
 								<div class="upper-modal">
-									<h1>Take it for a test drive</h1>
+									<h1 class="modal-title">Take it for a test drive</h1>
 									<p>
 										Text the number <span class="phone-number">(510) 545-4447</span>
 									</p>
@@ -89,22 +130,66 @@
 						</div>
 					</div>
 				</div>
+
 			</section>
 
-
-		<div class="gradient">
-			<!-- <div class="credibility">
-				<img src="./img/tc-techcrunch.png" alt="TechCrunch logo" />
-			</div> -->
+		<div class="container arrow-container animated">
+			<div class="row">
+				<div class="down-arrow">
+					<a href="#anc1">
+						<span class="bottom"></span>
+					</a>
+				</div>
+			</div>
 		</div>
 
+	</div>
 
-
+	<section class="features">
+		<div class="container">
+			<div class="row">
+				<div id="anc1" class="col col-md-4">
+					<div class="card">
+						<img src="" alt="" class="card-img">
+						<span class="card-title">No programming needed</span>
+						<p class="card-descr">Kreo's bot development software allows you to build chatbots quickly and easily.
+																	All without needing to know how to program one.</p>
+					</div>
+				</div>
+				<div class="col col-md-4">
+					<div class="card">
+						<img src="" alt="" class="card-img">
+						<span class="card-title">Simple &amp; easy to use</span>
+						<p class="card-descr">Create bots with a simple Question and Answer structure. Just start your bot off </p>
+					</div>
+				</div>
+				<div class="col col-md-4">I'm here</div>
+			</div>
 		</div>
+	</section>
 
 
 
 		<script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./js/txtType.js"></script>
+		<script type="text/javascript" src="./js/hero_carousel.js"></script>
+
+		<script>
+		$('.carousel').carousel({
+			interval: 3500
+		})
+
+			// set timeout
+			var tid = setTimeout(mycode, 4000);
+			function mycode() {
+			  // do some stuff...
+				$('.arrow-container').addClass('bounce');
+			  tid = setTimeout(mycode, 2000); // repeat myself
+
+			}
+		</script>
+
+
 		</body>
 </html>
