--- a/home.html
+++ b/home.html
@@ -15,46 +15,12 @@
 	<body>
 
 		 <div class="background-image-body"> <!-- background-image-body -->
-			 <!-- <div id="carousel-example-generic" class="carousel slide gradient" data-ride="carousel"> -->
-				 <!-- Indicators -->
-
-				 <!-- Wrapper for slides -->
-				 <!-- <div class="carousel-inner" role="listbox">
-					 <div class="item active">
-						 <img src="./img/concert.jpg" alt="...">
-					 </div>
-					 <div class="item">
-						 <img src="./img/event.jpg" alt="...">
-					 </div>
-					 <div class="item">
-						 <img src="./img/business.jpg" alt="...">
-					 </div>
-					 <div class="item">
-						 <img src="./img/customer.jpg" alt="...">
-					 </div>
-				 </div> -->
-
-				 <!-- Controls -->
-				 <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-					 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					 <span class="sr-only">Previous</span>
-				 </a>
-				 <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-					 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					 <span class="sr-only">Next</span>
-				 </a>
-				</div> -->
-
-
-
-
-
 			<header class="animated fadeInDown">
 				<nav class="navbar navbar-default">
 				  <div class="container-fluid">
 				    <!-- Brand and toggle get grouped for better mobile display -->
 				    <div class="navbar-header">
-				      <span class="navbar-brand" href="#">Kreo</span>
+				      <span class="navbar-brand" href="#">Prime.ai</span>
 				    </div>
 				    <!-- Collect the nav links, forms, and other content for toggling -->
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -159,11 +125,17 @@
 				<div class="col col-md-4">
 					<div class="card">
 						<img src="" alt="" class="card-img">
-						<span class="card-title">Simple &amp; easy to use</span>
-						<p class="card-descr">Create bots with a simple Question and Answer structure. Just start your bot off </p>
+						<span class="card-title">Up and running quickly</span>
+						<p class="card-descr">Build a chatbot in 5 minutes or less From start to finish. </p>
 					</div>
 				</div>
-				<div class="col col-md-4">I'm here</div>
+				<div class="col col-md-4">
+					<div class="card">
+						<img src="" alt="" class="card-img">
+						<span class="card-title">Simple communication</span>
+						<p class="card-descr">Choose a unique phone number only for your chatbot and start chatting immediately </p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
