--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
 		<div class="container arrow-container animated">
 			<div class="row">
 				<div class="down-arrow">
-					<a href="#anc1">
+					<a href="#anch1">
 						<span class="bottom"></span>
 					</a>
 				</div>
@@ -111,35 +111,76 @@
 
 	</div>
 
-	<section class="features">
+	<section class="programming">
 		<div class="container">
 			<div class="row">
-				<div id="anc1" class="col col-md-4">
-					<div class="card">
-						<img src="" alt="" class="card-img">
-						<span class="card-title">No programming needed</span>
-						<p class="card-descr">Kreo's bot development software allows you to build chatbots quickly and easily.
-																	All without needing to know how to program one.</p>
+				<div id="anch1" class="col col-md-12">
+					<div class="card col col-md-6">
+						<h4 class="card-title">No programming needed</h4>
+						<p class="card-descr">
+							Prime's bot development software allows you to build chatbots quickly and easily.
+							All without needing to know how to program one.
+						</p>
 					</div>
-				</div>
-				<div class="col col-md-4">
-					<div class="card">
-						<img src="" alt="" class="card-img">
-						<span class="card-title">Up and running quickly</span>
-						<p class="card-descr">Build a chatbot in 5 minutes or less From start to finish. </p>
-					</div>
-				</div>
-				<div class="col col-md-4">
-					<div class="card">
-						<img src="" alt="" class="card-img">
-						<span class="card-title">Simple communication</span>
-						<p class="card-descr">Choose a unique phone number only for your chatbot and start chatting immediately </p>
+					<div class="img-wrapper col col-md-6">
+						<img src="./img/code.svg" alt="no programming needed" class="card-img">
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<section class="time">
+		<div class="container">
+			<div class="row">
+				<div id="anch2" class="col col-md-12">
+					<div class="card col col-md-6">
+						<h4 class="card-title">Up and running quickly</h4>
+						<p class="card-descr">Build a chatbot in 5 minutes or less From start to finish. </p>
+					</div>
+					<div class="img-wrapper col col-md-6">
+						<img src="./img/fast-time.svg" alt="up and running quick" class="card-img">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="communication">
+		<div class="container">
+			<div class="row">
+				<div id="anch3" class="col col-md-12">
+					<div class="card col col-md-6">
+						<h4 class="card-title">Simple communication</h4>
+						<p class="card-descr">Choose a unique phone number only for your chatbot and start chatting immediately </p>
+					</div>
+					<div class="img-wrapper col col-md-6">
+						<img src="./img/communication.svg" alt="simple communication" class="card-img">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="footer-cta-copy">
+					<p>
+						Try out our bot we made for you.
+					</p>
+				</div>
+				<div class="center-block">
+					<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it</button>
+				</div>
+				<div class="footer-wrapper">
+					<p>
+						Copyright (c) 2016 Copyright Prime.ai All Rights Reserved.
+					</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 		<script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
