--- a/home.html
+++ b/home.html
@@ -180,6 +180,10 @@
 				</div>
 			</div>
 		</div>
+
+
+
+		
 	</footer>
 
 
@@ -203,6 +207,9 @@
 			}
 		</script>
 
-
+		<script src="https://cdn.smooch.io/smooch.min.js"></script>
+		<script>
+		Smooch.init({ appToken: '0hdvo6d95d0u4ifrt7lgzhvs0' });
+		</script>
 		</body>
 </html>
