--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
 
 
 
-		
+
 	</footer>
 
 
@@ -208,8 +208,13 @@
 		</script>
 
 		<script src="https://cdn.smooch.io/smooch.min.js"></script>
-		<script>
+		<!-- <script>
 		Smooch.init({ appToken: '0hdvo6d95d0u4ifrt7lgzhvs0' });
+		</script> -->
+
+		<script>
+		Smooch.init({ appToken: '8tjp8dmj0loyzl5cqf3yd8lu9' });
 		</script>
+
 		</body>
 </html>
