--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
-		<title>Almi</title>
+		<title>Prime.ai</title>
 
 		<link rel="stylesheet" href="./css/bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen" title="no title">
 		<link rel="stylesheet" href="./css/styles.css" media="screen" title="no title">
@@ -167,7 +167,7 @@
 			<div class="row">
 				<div class="footer-cta-copy">
 					<p>
-						Try out our bot we made for you.
+						Try out our chatbot.
 					</p>
 				</div>
 				<div class="center-block">
