made site responsive

--- a/home.html
+++ b/home.html
@@ -207,14 +207,14 @@
 			}
 		</script>
 
-		<script src="https://cdn.smooch.io/smooch.min.js"></script>
+		<!-- <script src="https://cdn.smooch.io/smooch.min.js"></script> -->
 		<!-- <script>
 		Smooch.init({ appToken: '0hdvo6d95d0u4ifrt7lgzhvs0' });
 		</script> -->
 
-		<script>
+		<!-- <script>
 		Smooch.init({ appToken: '8tjp8dmj0loyzl5cqf3yd8lu9' });
-		</script>
+		</script> -->
 
 		</body>
 </html>
