--- a/home.html
+++ b/home.html
@@ -43,12 +43,13 @@
 							</div>
 							<span class="blinking-cursor">|</span>
 							<br>
-							without the hastle
+							without the hassle
 						</h1>
-						<h3>A chatbot creation platform that doesn't require programming experience</h3>
+						<h3>Even if you don’t have programming experience.</h3>
+						<!-- <h3>A chatbot creation platform that doesn't require programming experience</h3> -->
 						<!-- Large modal -->
 						<div class="center-block">
-							<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it</button>
+							<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it for free</button>
 						</div>
 					</div>
 				</div>
@@ -116,10 +117,14 @@
 			<div class="row">
 				<div id="anch1" class="col col-md-12">
 					<div class="card col col-md-6">
-						<h4 class="card-title">No programming needed</h4>
-						<p class="card-descr">
+						<!-- <h4 class="card-title">No programming needed</h4> -->
+						<h4 class="card-title">Intuitive</h4>
+						<!-- <p class="card-descr">
 							Prime's bot development software allows you to build chatbots quickly and easily.
 							All without needing to know how to program one.
+						</p> -->
+						<p class="card-descr">
+							You can build your personal chatbot quickly and easily, even if you don’t know the first thing about programming. Just let Prime’s bot development software do the work for you.
 						</p>
 					</div>
 					<div class="img-wrapper col col-md-6">
@@ -135,8 +140,10 @@
 			<div class="row">
 				<div id="anch2" class="col col-md-12">
 					<div class="card col col-md-6">
-						<h4 class="card-title">Up and running quickly</h4>
-						<p class="card-descr">Build a chatbot in 5 minutes or less From start to finish. </p>
+						<!-- <h4 class="card-title">Up and running quickly</h4>
+						<p class="card-descr">Build a chatbot in 5 minutes or less From start to finish. </p> -->
+						<h4 class="card-title">Time-Saving</h4>
+						<p class="card-descr">If you have five minutes to spare, you can build a chatbot. From start to finish, all it takes is a few minutes. </p>
 					</div>
 					<div class="img-wrapper col col-md-6">
 						<img src="./img/fast-time.svg" alt="up and running quick" class="card-img">
@@ -151,8 +158,11 @@
 			<div class="row">
 				<div id="anch3" class="col col-md-12">
 					<div class="card col col-md-6">
-						<h4 class="card-title">Simple communication</h4>
-						<p class="card-descr">Choose a unique phone number only for your chatbot and start chatting immediately </p>
+						<!-- <h4 class="card-title">Simple communication</h4>
+						<p class="card-descr">Choose a unique phone number only for your chatbot and start chatting immediately </p> -->
+						<h4 class="card-title">Simple Communication</h4>
+						<p class="card-descr">Just pick a unique phone number for your personal bot and start chatting instantly. </p>
+
 					</div>
 					<div class="img-wrapper col col-md-6">
 						<img src="./img/communication.svg" alt="simple communication" class="card-img">
@@ -167,11 +177,11 @@
 			<div class="row">
 				<div class="footer-cta-copy">
 					<p>
-						Try out our chatbot.
+						Click here to try it now.
 					</p>
 				</div>
 				<div class="center-block">
-					<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it</button>
+					<button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target=".try-now-modal">Try it for free</button>
 				</div>
 				<div class="footer-wrapper">
 					<p>
